--- a/settings.json
+++ b/settings.json
@@ -8,8 +8,8 @@
 "Mail":"alwanshinigamu@gmail.com",
 "Miminnya" : "Alwan Karsa",
 "fake" : "© Alluka Zoldyck",
-"NamaOwner":"Alwan Karsa", 
-"lolkey": "beli dek", // atau daftar di lolhuman.xyz
+"NamaOwner":"Alwan Karsa",
+"lolkey": "beli dek",
 "vhtearkey": "beli",
 "HelKey": "kfL8EfHc",
 "gcounti": {
